Destination completed for responsive

--- a/Proiect-main/Destination/destination-moon.html
+++ b/Proiect-main/Destination/destination-moon.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <title>Frontend Mentor | Space tourism website</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Space tourism website</title>
+  <link rel="stylesheet" href="destination.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,700;1,500&family=Bellefair&display=swap" rel="stylesheet">  
 </head>
-<body class="homepage body">
+<body>
 
   <header>
 
@@ -42,7 +43,7 @@
             <p>HOME</p>
         </li>
         </a>
-        <a href="../Destination/destination-moon.html" class="nav-link">
+        <a href="#" class="nav-link">
         <li class="nav-item">        
             <span>01</span>
             <p>DESTINATION</p>
@@ -66,26 +67,68 @@
 
   </header>
 
+
   <main>
 
     <div class="main-title">
 
-      <h4 class="subtitle">SO , YOU WANT TO TRAVEL TO</h4>
+    <div class="subtitle">
+      <h4> <span>01</span> PICK UP YOUR DESTINATION</h4>
+    </div>
 
-      <h1 class="title">SPACE</h1>
+    <img src="../assets/destination/image-moon.png" alt="moon" class="moon">
 
-      <p class="description">
-        Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!
-      </p>
+  </div>
+
+  <div class="right-content">
+
+    <div class="list-item">
+
+      <a href="#">MOON</a>
+      <a href="destination-mars.html">MARS</a>
+      <a href="destination-europa.html">EUROPA</a>
+      <a href="destination-titan.html">TITAN</a>
 
     </div>
 
-    <a href="#" class="cta-btn">EXPLORE</a>
-  
+    <div class="title">
 
+      <p>MOON</p>
+
+    </div>
+
+    <div class="description">
+
+      <p>See our planet as you've never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you're there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
     
+    </div>
+
+    <div class="horizontal"></div>
+
+    <div class="information">
+
+      <div class="distance">
+
+      <span class="span">AVG. DISTANCE</span>
+      <p>384,400 KM</p>
+
+      </div>
+
+      <div class="travel-time">
+
+      <span class="span">AVG. DISTANCE</span>
+      <p>384,400 KM</p>
+
+      </div>
+
+    </div>
+
+  </div>
 
   </main>
+
+
+
 
 </body>
 </html>
