--- a/Proiect-main/Destination/destination-mars.html
+++ b/Proiect-main/Destination/destination-mars.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <title>Frontend Mentor | Space tourism website</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Space tourism website</title>
+  <link rel="stylesheet" href="destination.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,700;1,500&family=Bellefair&display=swap" rel="stylesheet">  
 </head>
-<body class="homepage body">
+<body>
 
   <header>
 
@@ -42,7 +43,7 @@
             <p>HOME</p>
         </li>
         </a>
-        <a href="../Destination/destination-moon.html" class="nav-link">
+        <a href="#" class="nav-link">
         <li class="nav-item">        
             <span>01</span>
             <p>DESTINATION</p>
@@ -66,26 +67,68 @@
 
   </header>
 
+
   <main>
 
     <div class="main-title">
 
-      <h4 class="subtitle">SO , YOU WANT TO TRAVEL TO</h4>
+    <div class="subtitle">
+      <h4> <span>01</span> PICK UP YOUR DESTINATION</h4>
+    </div>
 
-      <h1 class="title">SPACE</h1>
+    <img src="../assets/destination/image-mars.png" alt="moon" class="moon">
 
-      <p class="description">
-        Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!
-      </p>
+  </div>
+
+  <div class="right-content">
+
+    <div class="list-item">
+
+      <a href="destination-moon.html">MOON</a>
+      <a href="#">MARS</a>
+      <a href="destination-europa.html">EUROPA</a>
+      <a href="destination-titan.html">TITAN</a>
 
     </div>
 
-    <a href="#" class="cta-btn">EXPLORE</a>
-  
+    <div class="title">
 
+      <p>MARS</p>
+
+    </div>
+
+    <div class="description">
+
+      <p>Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
     
+    </div>
+
+    <div class="horizontal"></div>
+
+    <div class="information">
+
+      <div class="distance">
+
+      <span class="span">AVG. DISTANCE</span>
+      <p>225 MIL. KM</p>
+
+      </div>
+
+      <div class="travel-time">
+
+      <span class="span">AVG. DISTANCE</span>
+      <p>9 MONTHS</p>
+
+      </div>
+
+    </div>
+
+  </div>
 
   </main>
+
+
+
 
 </body>
 </html>
