All pages complete and responsive!

--- a/Proiect-main/Crew pages/crew-pilot.html
+++ b/Proiect-main/Crew pages/crew-pilot.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="crew.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
     <div class="desktop-nav">
       <ul class="nav-list">
 
-        <a href="#" class="nav-link">
+        <a href="../homepage/index.html" class="nav-link">
         <li class="nav-item">          
             <span>00</span>
             <p>HOME</p>
@@ -48,7 +48,7 @@
             <p>DESTINATION</p>
         </li>
         </a>
-        <a href="../Crew pages/crew-commander.html" class="nav-link">
+        <a href="#" class="nav-link">
         <li class="nav-item">
             <span>02</span>
             <p>CREW</p>
@@ -70,20 +70,49 @@
 
     <div class="main-title">
 
-      <h4 class="subtitle">SO , YOU WANT TO TRAVEL TO</h4>
+      <h4 class="subtitle"><span>02</span> MEET YOUR CREW</h4>
 
-      <h1 class="title">SPACE</h1>
+      <img src="../assets/crew/image-victor-glover.png" alt="commander" class="image">
 
-      <p class="description">
-        Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!
-      </p>
+      <div class="horizontal"></div>
+
+      <div class="center-content">
+
+        <h4 class="subtitle1"><span>02</span> MEET YOUR CREW</h4>
+
+        <div class="list-item1">
+
+          <a href="crew-commander.html" class="circle"></a>
+          <a href="crew-specialist.html" class="circle"></a>
+          <a href="#" class="circle"></a>
+          <a href="crew-engineer.html" class="circle"></a>
+  
+        </div>
+
+      <h2 class="job">PILOT</h2>
+
+      <h1 class="name">VICTOR GLOVER</h1>
+
+      <div class="description">
+
+      <p>Pilot on the first operational flight of the SpaceX Crew Dragon to the International Space Station. Glover is a commander in the U.S. Navy where he pilots an F/A-18.He was a crew member of Expedition 64, and served as a station systems flight engineer. </p>
+
+      </div>
+
+      <div class="list-item">
+
+        <a href="crew-commander.html" class="circle"></a>
+        <a href="crew-specialist.html" class="circle"></a>
+        <a href="#" class="circle"></a>
+        <a href="crew-engineer.html" class="circle"></a>
+
+      </div>
 
     </div>
 
-    <a href="#" class="cta-btn">EXPLORE</a>
-  
+    </div>
 
-    
+  
 
   </main>
 
