--- a/Proiect-main/Destination/destination-moon.html
+++ b/Proiect-main/Destination/destination-moon.html
@@ -37,7 +37,7 @@
     <div class="desktop-nav">
       <ul class="nav-list">
 
-        <a href="#" class="nav-link">
+        <a href="../homepage/index.html" class="nav-link">
         <li class="nav-item">          
             <span>00</span>
             <p>HOME</p>
@@ -49,13 +49,13 @@
             <p>DESTINATION</p>
         </li>
         </a>
-        <a href="#" class="nav-link">
+        <a href="../Crew pages/crew-commander.html" class="nav-link">
         <li class="nav-item">
             <span>02</span>
             <p>CREW</p>
         </li>
         </a>
-        <a href="#" class="nav-link">
+        <a href="../Technology/technology-vehicle.html" class="nav-link">
         <li class="nav-item">
             <span>03</span>
             <p>TECHNOLOGY</p>         
