--- a/Proiect-main/Technology/technology-vehicle.html
+++ b/Proiect-main/Technology/technology-vehicle.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
+  
   <title>Frontend Mentor | Space tourism website</title>
 
   <link rel="stylesheet" href="styles.css">
@@ -14,6 +18,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,700;1,500&family=Bellefair&display=swap" rel="stylesheet">  
+
 </head>
 <body class="homepage body">
 
@@ -36,7 +41,7 @@
     <div class="desktop-nav">
       <ul class="nav-list">
 
-        <a href="#" class="nav-link">
+        <a href="../homepage/index.html" class="nav-link">
         <li class="nav-item">          
             <span>00</span>
             <p>HOME</p>
@@ -54,7 +59,7 @@
             <p>CREW</p>
         </li>
         </a>
-        <a href="../Technology/technology-vehicle.html" class="nav-link">
+        <a href="#" class="nav-link">
         <li class="nav-item">
             <span>03</span>
             <p>TECHNOLOGY</p>         
@@ -68,24 +73,37 @@
 
   <main>
 
-    <div class="main-title">
+      <p class="space-launch"><span>03</span> SPACE LAUNCH 101</p>
 
-      <h4 class="subtitle">SO , YOU WANT TO TRAVEL TO</h4>
+      <img src="../assets/technology/image-launch-vehicle-landscape.jpg" alt="" class="space-image">
 
-      <h1 class="title">SPACE</h1>
+      <div class="list-item">
 
-      <p class="description">
-        Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!
-      </p>
+        <a href="#" class="circle">1</a>
+        <a href="../Technology/technology-spaceport.html" class="circle">2</a>
+        <a href="../Technology/technology-capsule.html" class="circle">3</a>
 
-    </div>
+      </div>
 
-    <a href="#" class="cta-btn">EXPLORE</a>
-  
 
-    
+      <div class="main-title">
+
+        <p class="subtitle">THE TERMINOLOGY ...</p>
+
+        <h4 class="title">LAUNCH VEHICLE </h4>
+
+        <p class="description">
+          A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
+        </p>
+
+        
+
+      </div>
+
+        <img src="../assets/technology/image-launch-vehicle-portrait.jpg" alt="image" class="portrait-image">
 
   </main>
+
 
 </body>
 </html>
