--- a/Proiect-main/Crew pages/crew-commander.html
+++ b/Proiect-main/Crew pages/crew-commander.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="crew.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
     <div class="desktop-nav">
       <ul class="nav-list">
 
-        <a href="#" class="nav-link">
+        <a href="../homepage/index.html" class="nav-link">
         <li class="nav-item">          
             <span>00</span>
             <p>HOME</p>
@@ -48,7 +48,7 @@
             <p>DESTINATION</p>
         </li>
         </a>
-        <a href="../Crew pages/crew-commander.html" class="nav-link">
+        <a href="#" class="nav-link">
         <li class="nav-item">
             <span>02</span>
             <p>CREW</p>
@@ -70,20 +70,49 @@
 
     <div class="main-title">
 
-      <h4 class="subtitle">SO , YOU WANT TO TRAVEL TO</h4>
+      <h4 class="subtitle"><span>02</span> MEET YOUR CREW</h4>
 
-      <h1 class="title">SPACE</h1>
+      <img src="../assets/crew/image-douglas-hurley.png" alt="commander" class="image">
 
-      <p class="description">
-        Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!
-      </p>
+      <div class="horizontal"></div>
+
+      <div class="center-content">
+
+        <h4 class="subtitle1"><span>02</span> MEET YOUR CREW</h4>
+
+        <div class="list-item1">
+
+          <a href="#" class="circle"></a>
+          <a href="crew-specialist.html" class="circle"></a>
+          <a href="crew-pilot.html" class="circle"></a>
+          <a href="crew-engineer.html" class="circle"></a>
+  
+        </div>
+
+      <h2 class="job">COMMANDER</h2>
+
+      <h1 class="name">DOUGLAS HURLEY</h1>
+
+      <div class="description">
+
+      <p>Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</p>
+
+      </div>
+
+      <div class="list-item">
+
+        <a href="#" class="circle"></a>
+        <a href="crew-specialist.html" class="circle"></a>
+        <a href="crew-pilot.html" class="circle"></a>
+        <a href="crew-engineer.html" class="circle"></a>
+
+      </div>
 
     </div>
 
-    <a href="#" class="cta-btn">EXPLORE</a>
-  
+    </div>
 
-    
+  
 
   </main>
 
